Render messages from server
Render new messages as they arrive from socket.io server
Automatically scroll to bottom of message window

--- a/src/index.scss
+++ b/src/index.scss
@@ -67,14 +67,17 @@
 }
 
 .message-text {
-  display: inline-block;
+  display: flex;
   width: 93%;
+  
 }
 
 .messages-window {
   height: 70vh;
   margin: 1rem;
   border: 1px solid black;
+  overflow-y: scroll;
+  
 }
 
 .userImage {
