--- a/src/index.scss
+++ b/src/index.scss
@@ -1,35 +1,27 @@
 @import '~bootstrap/scss/bootstrap';
 
-.main-content-window {
-  border: 1px solid black;
-}
 
-.brand {
-  border: 1px solid black;
-  margin: 1rem;
-}
+// .top-row {
+//   margin: 0 auto;
+// }
 
-.top-row {
-  margin: 0 auto;
-}
+// .top-nav {
+//   display: flex;
+//   align-items: flex-end;
+//   justify-content: right;
+//   padding: 0;
+//   margin: 1rem;
+//   border: 1px solid black;
+// }
 
-.top-nav {
-  display: flex;
-  align-items: end;
-  justify-content: right;
-  padding: 0;
-  margin: 1rem;
-  border: 1px solid black;
-}
-
-.nav-link {
-  border: 1px solid black;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  margin: 1rem !important;
-}
+// .nav-link {
+//   border: 1px solid black;
+//   display: inline-flex;
+//   justify-content: center;
+//   align-items: center;
+//   flex-direction: row;
+//   margin: 1rem !important;
+// }
 
 .left-side-nav {
   height: 30vh;
