Add space on front page for current users
This space will be filled with the users that are members of the room you are currently in

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,9 +23,17 @@
 //   margin: 1rem !important;
 // }
 
+.active-users {
+  width: 100%;
+  margin: 0 !important;
+  height: 40vh;
+  border: 1px solid black;
+}
+
 .left-side-nav {
   height: 30vh;
-  margin: 1rem;
+  margin: 1rem 0;
+  padding: 1rem;
   border: 1px solid black;
 }
 
