Fixed error DropDown && Change Passoword
OffCanvas changed to DropDown and Change Password error has been Fixed

--- a/src/all-styles/SignIn.scss
+++ b/src/all-styles/SignIn.scss
@@ -14,12 +14,14 @@ width: 100%;
   background-color: rgb(255, 255, 255);
   border-radius: 1rem;
   padding: 2.5rem;
+  padding-top: 1rem;
   width: 25rem;
 }
 
 /* Sign in header3 */
 .signin-header3 {
   text-align: center;
+  padding: .5rem;
   letter-spacing: 0.2rem;
   color: rgb(115, 115, 115);
 }
