--- a/src/all-styles/Header.scss
+++ b/src/all-styles/Header.scss
@@ -5,36 +5,48 @@ body {
 
  /* Header componenet wrapper div */
 .header-wrapper {
-
-  margin-left: 1rem;
-  letter-spacing: 2rem;
+  background-color:rgb(135,171,255);
+  padding: .5rem;
   font-size: 1.2rem;
   width: 100vw;
 
 }
 
+/* logo wrapper in header 2nd div */
+.logo-wrapper{
+  margin-left: 1rem;
+}
+
+
 /* Logo text span */
 .logo-text {
-  background-color: rgb(89, 83, 253);
   border-radius: 10px;
   color: white;
   padding: 0.4rem;
   display: inline-block;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
 
 }
 
 /* Navbar all links (NavLink) */
-.nav-link {
+.link {
+  margin-right: 1rem;
   text-decoration: none;
   color: #777;
   letter-spacing: 0.16vw;
 }
 
 /* Links wrapper Login and Register */
-.nav-links-group-1 {
+.links-group-1 {
   display: flex;
   position: absolute;
-  top: 1vh;
+  top: 2vh;
   right: 1vw;
+}
+
+/* login and register links */
+.login, .register{
+  color: white;
+  margin-left: 1rem;
 }
