--- a/src/all-styles/SignUp.scss
+++ b/src/all-styles/SignUp.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  height: 85vh;
   width: 100%;
   }
   
@@ -14,6 +14,7 @@
     background-color: rgb(255, 255, 255);
     border-radius: 1rem;
     padding: 2.5rem;
+    padding-top: 1.5rem;
     width: 30rem;
   }
   
