--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,8 @@ body {
   width: 100%;
   margin: 0 !important;
   height: 40vh;
-  border: 1px solid black;
+  border: 1px solid $borderColor;
+  border-radius: 1rem;
 }
 
 .all-fields-required {
@@ -30,6 +31,7 @@ body {
 }
 
 .changePass-parent-wrapper {
+  background-color: $modelColorBG;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,7 +39,7 @@ body {
   }
   
   .changePass-form-wrapper {
-    background-color: rgb(255, 255, 255);
+    background-color: $modelColorBG;
     border-radius: 1rem;
     padding: 2.5rem;
     padding-top: 1rem;
@@ -95,21 +97,58 @@ body {
   margin: 0;
 }
 
-.parent-dropdown-wrapper .nav-link:hover {
-background-color: #eee;
-}
-
 .form-control, input {
   background-color: black;
   border-color: $fontColor;
 }
 
  /* Header componenet wrapper div */
+
 .header-wrapper {
-  margin-left: 1rem;
-  letter-spacing: 2rem;
+  background-color: $backgroundColor;
+  padding: .5rem;
   font-size: 1.2rem;
   width: 100vw;
+
+}
+
+/* logo wrapper in header 2nd div */
+.logo-wrapper{
+  margin-left: 1rem;
+}
+
+
+/* Logo text span */
+.logo-text {
+  border-radius: 10px;
+  color: white;
+  padding: 0.4rem;
+  display: inline-block;
+  font-size: 1.2rem;
+  font-weight: bold;
+
+}
+
+/* Navbar all links (NavLink) */
+.link {
+  margin-right: 1rem;
+  text-decoration: none;
+  color: #777;
+  letter-spacing: 0.16vw;
+}
+
+/* Links wrapper Login and Register */
+.links-group-1 {
+  display: flex;
+  position: absolute;
+  top: 2vh;
+  right: 1vw;
+}
+
+/* login and register links */
+.login, .register{
+  color: white;
+  margin-left: 1rem;
 }
 
 .left-side-nav.col-2.col {
@@ -135,7 +174,9 @@ background-color: #eee;
 .left-side-nav {
   height: 30vh;
   margin: 1rem;
-  border: 1px solid black;
+  border: 1px solid $borderColor;
+  border-radius: 1rem;
+  color: $fontColor;
 }
 
 .main-content {
@@ -194,7 +235,7 @@ background-color: #eee;
   border-top-right-radius: 1rem;
   border-top-left-radius: 1rem;
   padding: 1.5rem;
-  background-color: rgb(135,171,255);
+  background-color: $backgroundColor;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -215,6 +256,10 @@ background-color: #eee;
 
 .OffCanvas-wrapper {
   width: 22vw;
+}
+
+.parent-dropdown-wrapper .nav-link:hover {
+background-color: $backgroundColor;
 }
 
 .room-name {
@@ -316,7 +361,6 @@ width: 100%;
   margin-right: 1rem;
   float: left;
 }
-
 
 //************* SCROLL BAR *******************//
 ::-webkit-scrollbar {
