Styled front end components
committing to pull latest Dev

--- a/src/all-styles/colors.scss
+++ b/src/all-styles/colors.scss
@@ -1,6 +1,7 @@
 $backgroundColor: rgb(0, 0, 0);
-$fontColor: rgb(194, 194, 194);
-$modelColorBG: rgb(45, 45, 45);
+$borderColor: rgb(177, 71, 71);
 $buttonColor: rgb(10, 32, 87);
-$borderColor: rgb(20, 67, 6);
-$messageBoxBG: rgba(63, 63, 63,.4);
+$fontColor: rgb(194, 194, 194);
+$inputBackground: rgb(182, 182, 182);
+$messageBoxBG: rgb(63, 63, 63);
+$modelColorBG: rgb(45, 45, 45);
