--- a/src/index.scss
+++ b/src/index.scss
@@ -6,10 +6,15 @@ body {
   color: $fontColor
 }
 
+button {
+  border-radius: .3rem;
+}
+
 .active-users {
   width: 100%;
   margin: 0 !important;
   height: 40vh;
+  width: 12vw;
   border: 1px solid $borderColor;
   border-radius: 1rem;
 }
@@ -98,7 +103,7 @@ body {
 }
 
 .form-control, input {
-  background-color: black;
+  background-color: $inputBackground;
   border-color: $fontColor;
 }
 
@@ -151,6 +156,16 @@ body {
   margin-left: 1rem;
 }
 
+.left-side-nav {
+  height: 30vh;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  width: 12vw;
+  border: 1px solid $borderColor;
+  border-radius: 1rem;
+  color: $fontColor;
+}
+
 .left-side-nav.col-2.col {
   height: 30vh;
   margin: 1rem;
@@ -171,14 +186,6 @@ body {
 
 }
 
-.left-side-nav {
-  height: 30vh;
-  margin: 1rem;
-  border: 1px solid $borderColor;
-  border-radius: 1rem;
-  color: $fontColor;
-}
-
 .main-content {
   margin: 1rem;
   border: 1px solid black;
@@ -191,9 +198,9 @@ body {
 }
 
 .message-input {
-  width: 80%;
+  width: 92%;
   margin: 0.5rem;
-  background: black;
+  background: $inputBackground;
 }
 
 .message-input-window {
@@ -226,14 +233,19 @@ body {
 
 /*  Modal Companenet */
 
+.modal-body {
+  background-color: $modelColorBG;
+}
+
 .modal-content {
+  background-color: $modelColorBG;
   top: 15vh;
   border-radius: 1rem;
 }
 
 .modal-header {
-  border-top-right-radius: 1rem;
-  border-top-left-radius: 1rem;
+  border-top-right-radius: .8rem;
+  border-top-left-radius: .8rem;
   padding: 1.5rem;
   background-color: $backgroundColor;
   display: flex;
@@ -262,9 +274,24 @@ body {
 background-color: $backgroundColor;
 }
 
+.roomsHeader {
+  margin-left: 1rem;
+  margin-top: .5rem;
+}
+
 .room-name {
   text-align: center;
   align-content: center;
+}
+
+.form-control {
+  width: 95%;
+  margin: .3rem;
+}
+
+.room-title  {
+  text-align: center;
+  float: top;
 }
 
 .signin-parent-wrapper {
@@ -360,6 +387,11 @@ width: 100%;
   border-radius: 100%;
   margin-right: 1rem;
   float: left;
+}
+
+#dropdown-button-drop-end {
+  margin-top: .5rem;
+  margin-right: -1rem;
 }
 
 //************* SCROLL BAR *******************//
