--- a/src/index.scss
+++ b/src/index.scss
@@ -403,6 +403,36 @@ width: 100%;
   color: $buttonColor
 }
 
+.user-list {
+  
+}
+
+.user-list-item {
+  display: flex;
+  align-items: center;
+  height: 5vh;
+  margin: 3vh 0;
+}
+
+.user-image {
+  height: 2.5rem;
+  width: 2.5rem;
+  border-radius: 100%;
+  margin-right: 1rem;
+  float: left;
+}
+
+.user-name {
+  margin: 0 1vw 0 0;
+  // vertical-align: middle;
+}
+
+.user-status {
+  vertical-align: middle;
+  float: right;
+  color: green;
+}
+
 // .top-row {
 //   margin: 0 auto;
 // }
