--- a/src/index.scss
+++ b/src/index.scss
@@ -13,8 +13,8 @@ button {
 .active-users {
   width: 100%;
   margin: 0 !important;
-  height: 40vh;
-  width: 12vw;
+  // height: 40vh;
+  // width: 12vw;
   border: 1px solid $borderColor;
   border-radius: 1rem;
 }
@@ -79,6 +79,10 @@ button {
   padding: .5rem;
   letter-spacing: 0.2rem;
   color: white
+}
+
+.main-container {
+  margin: 0 auto !important;
 }
 
 .dropdown-username {
@@ -156,11 +160,16 @@ button {
   margin-left: 1rem;
 }
 
+.left-side-options {
+  // width: 20%;
+}
+
 .left-side-nav {
   height: 30vh;
   margin-top: 2rem;
   margin-bottom: 1rem;
-  width: 12vw;
+  margin-right: 0;
+  width: 100%;
   border: 1px solid $borderColor;
   border-radius: 1rem;
   color: $fontColor;
@@ -187,7 +196,8 @@ button {
 }
 
 .main-content {
-  margin: 1rem;
+  margin: 1rem 0;
+  padding: 0;
   border: 1px solid black;
 }
 
@@ -275,8 +285,8 @@ background-color: $backgroundColor;
 }
 
 .roomsHeader {
-  margin-left: 1rem;
-  margin-top: .5rem;
+  margin: 1rem 0 1rem 1rem;
+  padding: 0;
 }
 
 .room-name {
@@ -404,32 +414,35 @@ width: 100%;
 }
 
 .user-list {
-  
+  width: 100%;
 }
 
 .user-list-item {
   display: flex;
   align-items: center;
   height: 5vh;
-  margin: 3vh 0;
+  margin: 0 0 3vh 0;
 }
 
 .user-image {
   height: 2.5rem;
   width: 2.5rem;
   border-radius: 100%;
-  margin-right: 1rem;
+  margin: 0 1rem 0 0.5rem;
   float: left;
 }
 
 .user-name {
   margin: 0 1vw 0 0;
+  width: 60%;
   // vertical-align: middle;
 }
 
 .user-status {
   vertical-align: middle;
-  float: right;
+  margin-right: 1rem;
+  position: relative;
+  right: 0;
   color: green;
 }
 
