committing styling for Hanif to help with

--- a/src/all-styles/colors.scss
+++ b/src/all-styles/colors.scss
@@ -5,3 +5,5 @@ $fontColor: rgb(194, 194, 194);
 $inputBackground: rgb(182, 182, 182);
 $messageBoxBG: rgb(63, 63, 63);
 $modelColorBG: rgb(45, 45, 45);
+$hoverBorderColor: rgb(182, 182, 182);
+$buttonHoverColor: rgb(32, 87, 227);
