--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,13 @@ body {
 }
 
 button {
+  transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
   border-radius: .3rem;
+
+  &:hover{
+    background-color: $buttonHoverColor;
+    border-color: $hoverBorderColor;
+  }
 }
 
 .active-users {
@@ -82,6 +88,11 @@ button {
   padding: .5rem;
   letter-spacing: 0.2rem;
   color: white
+}
+
+.create-room-button {
+  position: absolute;
+  right: 0;
 }
 
 .main-container {
@@ -176,6 +187,7 @@ button {
   border: 1px solid $borderColor;
   border-radius: 1rem;
   color: $fontColor;
+  overflow-y: scroll;
 }
 
 .left-side-nav.col-2.col {
@@ -288,13 +300,17 @@ background-color: $backgroundColor;
 }
 
 .roomsHeader {
-  margin: 1rem 0 1rem 1rem;
-  padding: 0;
+  padding: 1rem 0 1rem 1rem;
+  border-top-left-radius: 1rem;
+  position: fixed;
+  background-color: $backgroundColor;
+  display: inline;
 }
 
 .room-list {
   list-style-type: none;
   margin-left: -1rem;
+  margin-top: 8vh;
 }
 
 .room-name {
@@ -413,15 +429,6 @@ width: 100%;
   margin-right: -1rem;
 }
 
-//************* SCROLL BAR *******************//
-::-webkit-scrollbar {
-  background-color: rgba(0,0,0,0);
-}
-
-::-webkit-scrollbar-thumb{
-  color: $buttonColor
-}
-
 .user-list {
   width: 100%;
 }
@@ -453,6 +460,15 @@ width: 100%;
   position: relative;
   right: 0;
   color: green;
+}
+
+//************* SCROLL BAR *******************//
+::-webkit-scrollbar {
+  background-color: rgba(0,0,0,0);
+}
+
+::-webkit-scrollbar-thumb{
+  color: $buttonColor
 }
 
 // .top-row {
