+ button position fixed

--- a/src/all-styles/CreateRoomModal.scss
+++ b/src/all-styles/CreateRoomModal.scss
@@ -19,12 +19,11 @@ input {
 
 .create-room-button {
   position: absolute;
-  top: 1.5vh;
-  right: 2vw;
+  top: 2vh;
+  left: 18vw;
   height: 1.5rem;
-
-
 }
+
 .create-room-span {
   position: absolute;
   font-size: 1.5rem;
