--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,10 @@ button {
   }
 }
 
+input {
+  height: 2rem;
+}
+
 .active-users {
   width: 100%;
   margin: 0 !important;
@@ -92,7 +96,25 @@ button {
 
 .create-room-button {
   position: absolute;
-  right: 0;
+  top: 2vh;
+  left: 17vw;
+  height: 1.5rem;
+}
+
+.createRoom-modal-title{
+  padding:10px;
+  position: absolute;
+  text-align: center;
+  padding: .5rem;
+  letter-spacing: 0.1rem; 
+  color: white
+}
+
+.create-room-span {
+  position: absolute;
+  font-size: 1.5rem;
+  top: -8px;
+  right: 0.3rem;
 }
 
 .main-container {
@@ -123,8 +145,9 @@ button {
 .form-control, input {
   background-color: $inputBackground;
   border-color: $fontColor;
+  width: 95%;
+  margin: .3rem;
 }
-
  /* Header componenet wrapper div */
 
 .header-wrapper {
@@ -262,10 +285,11 @@ button {
   background-color: $modelColorBG;
 }
 
-.modal-content {
-  background-color: $modelColorBG;
-  top: 15vh;
-  border-radius: 1rem;
+.modal-content{
+  text-align: center;
+  width: 70%;
+  margin: 0 auto;
+  top: 0;
 }
 
 .modal-header {
@@ -302,6 +326,7 @@ background-color: $backgroundColor;
 .roomsHeader {
   padding: 1rem 0 1rem 1rem;
   border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
   background-color: $backgroundColor;
   display: inline-block;
 }
@@ -315,11 +340,6 @@ background-color: $backgroundColor;
 .room-name {
   text-align: center;
   align-content: center;
-}
-
-.form-control {
-  width: 95%;
-  margin: .3rem;
 }
 
 .room-title  {
@@ -493,9 +513,9 @@ width: 100%;
 // }
 
 
-.create-room-button {
-  position: absolute;
-  top: 2vh;
-  left: 18vw;
-  height: 1.5rem;
+.modal-content{
+  text-align: center;
+  width: 70%;
+  margin: 0 auto;
+  top: 0;
 }
